# utils

./: .pre-commit-config.yaml  README.md
python/: .gitignore  pyproject.toml
python/src/oes/util/: __init__.py  attrs.py  cattrs.py  logging.py  merge_dict.py  urlsafe_base64.py
python/src/oes/util/blacksheep/: __init__.py  attrs_handler.py  docs.py  middleware.py  response.py
python/tests/: test_attrs.py  test_cattrs.py  test_merge_dict.py  test_urlsafe_base64.py
python/tests/blacksheep/: __init__.py  test_attrs_handler.py  test_docs.py  test_response.py
