[tool.poetry]
name = "oes.util"
version = "0.1.0"
description = "OES shared utilities library"
authors = ["Wes <wes@anthronewengland.com>"]
packages = [{ include = "oes", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.7.1"
attrs = { version = "^23.1.0", optional = true }
cattrs = {version = "^23.1.2", optional = true}
orjson = { version = "^3.9.2", optional = true }
blacksheep = { version = "^1.2.18", optional = true }


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"

[tool.poetry.extras]
attrs = ["attrs"]
blacksheep = ["attrs", "cattrs", "blacksheep", "orjson"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=oes.util"
testpaths = ["tests"]


[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
